--- a/TwoViews/Base.lproj/Main.storyboard
+++ b/TwoViews/Base.lproj/Main.storyboard
@@ -16,50 +16,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" semanticContentAttribute="forceLeftToRight" translatesAutoresizingMaskIntoConstraints="NO" id="y2p-xU-xws">
-                                <rect key="frame" x="30" y="74" width="354" height="350"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y2p-xU-xws" userLabel="View Orange">
+                                <rect key="frame" x="10" y="54" width="394" height="394"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="350" id="LDI-7O-4FM"/>
-                                </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XZK-fo-EJQ">
-                                <rect key="frame" x="30" y="482" width="354" height="350"/>
-                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="350" id="Rb7-Br-DOF"/>
-                                </constraints>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="leS-Fs-89C" userLabel="View Blue">
+                                <rect key="frame" x="10" y="458" width="394" height="394"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="XZK-fo-EJQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="8a8-se-OR4"/>
-                            <constraint firstItem="y2p-xU-xws" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="BK4-Yf-C2L"/>
-                            <constraint firstItem="y2p-xU-xws" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="Bfo-ep-qg3"/>
-                            <constraint firstItem="y2p-xU-xws" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="CbV-rw-hHc"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XZK-fo-EJQ" secondAttribute="bottom" constant="30" id="G7H-4J-YSW"/>
-                            <constraint firstItem="XZK-fo-EJQ" firstAttribute="height" secondItem="y2p-xU-xws" secondAttribute="height" id="S6s-z8-z1r"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XZK-fo-EJQ" secondAttribute="trailing" constant="30" id="nFk-SX-ASz"/>
-                            <constraint firstItem="XZK-fo-EJQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="oOD-dr-DTz"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="y2p-xU-xws" secondAttribute="trailing" constant="30" id="xAU-4Y-40x"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="y2p-xU-xws" secondAttribute="trailing" constant="10" id="JhU-JQ-9Dp"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="leS-Fs-89C" secondAttribute="trailing" constant="10" id="Ld4-jk-Tnr"/>
+                            <constraint firstItem="y2p-xU-xws" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="OsL-Z9-ikm"/>
+                            <constraint firstItem="y2p-xU-xws" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="VcZ-ZD-aAr"/>
+                            <constraint firstItem="leS-Fs-89C" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="bcL-Ps-axu"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="leS-Fs-89C" secondAttribute="bottom" constant="10" id="jbq-cc-yoD"/>
+                            <constraint firstItem="leS-Fs-89C" firstAttribute="top" secondItem="y2p-xU-xws" secondAttribute="bottom" constant="10" id="r7f-TI-Ojp"/>
+                            <constraint firstItem="leS-Fs-89C" firstAttribute="height" secondItem="y2p-xU-xws" secondAttribute="height" id="y8V-Ze-agr"/>
                         </constraints>
                     </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="414" height="896"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="79.6875"/>
+            <point key="canvasLocation" x="17.39130434782609" y="78.348214285714278"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
